modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/extend_engine_singleton.gd
# GH-82081

extends Time

func test():
	pass
